Fixes horizontal scrolling for iPhone

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -249,10 +249,6 @@ h3
 
 // Homepage //////////
 
-
-
-
-
 #case
   padding: 70px 0 40px 0
 
@@ -427,6 +423,8 @@ h3
     margin-right: 15%
 
   h1
+    display: none
+    +respond-to(not-xs)
     margin-bottom: 50px
     text-align: center
 
